--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,12 @@
 raspberry/back/node_modules/
 server/bac/back/node_modules/
 server/front/TFGscada-app/node_modules/
+
+
+
+
+# node directorys
+
+raspberry/back/node_modules/
+server/bac/back/node_modules/
+server/front/TFGscada-app/node_modules/
