--- a/server/back/back/.env
+++ b/server/back/back/.env
@@ -10,9 +10,9 @@ ROUTES_WHITELIST=/api/users/authenticate,/api-docs,/robots.txt
 # dialect and schema are optional. If undefined, they equal 'postgres' and 'elliot', respectively.
 # If alter is true, force and drop schema are always ignored to prevent app crashing
 SEQUELIZE_DIALECT=postgres
-SEQUELIZE_DB=
+SEQUELIZE_DB=postgres
 SEQUELIZE_USER=postgres
 SEQUELIZE_PASS=
-SEQUELIZE_HOST=
+SEQUELIZE_HOST=localhost
 SEQUELIZE_PORT=5432
 SEQUELIZE_SCHEMA=
