--- a/server/front/TFGscada-app/package.json
+++ b/server/front/TFGscada-app/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
     "@auth0/angular-jwt": "^5.0.2",
+    "@material/form-field": "^14.0.0",
+    "ngx-mat-errors": "^14.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
