--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "files.associations": {
         "condition_variable": "cpp",
         "mutex": "cpp"
-    }
+    },
+    "C_Cpp.errorSquiggles": "Enabled"
 }
