--- a/server/front/TFGscada-app/package.json
+++ b/server/front/TFGscada-app/package.json
@@ -23,6 +23,8 @@
     "@auth0/angular-jwt": "^5.0.2",
     "@material/form-field": "^14.0.0",
     "@swimlane/ngx-charts": "^20.1.2",
+    "@types/d3-shape": "^3.1.1",
+    "d3": "^7.8.0",
     "ngx-mat-errors": "^14.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
@@ -32,6 +34,8 @@
     "@angular-devkit/build-angular": "^14.0.5",
     "@angular/cli": "~14.0.5",
     "@angular/compiler-cli": "^14.0.0",
+    "@types/d3-scale": "^4.0.3",
+    "@types/d3-selection": "^3.0.4",
     "@types/jasmine": "~4.0.0",
     "jasmine-core": "~4.1.0",
     "karma": "~6.3.0",
