--- a/server/back/back/package.json
+++ b/server/back/back/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.16.5",
+    "axios": "^1.2.5",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "cookie-parser": "^1.4.6",
